--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<h1>
+<h1>Título da Pagina </h1>
 
 <p>
    Testeando escrita de texto e geração de paginas pelo GitHub 
 </p>
 
-
-</h1>
+<p> 
+   Segundo paragrafo de formatação do texto
+</p>
